Fixed random scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,6 @@ h3 {
 	width: 100%;
 }
 .external_selector {
-    overflow-y: auto;
 	width: 100%;
 }
 ::-webkit-scrollbar {
